# CS2-CPP

./: .travis.yml  CMakeLists.txt  README.md  mcmf.cpp  mcmf.h  mcmf.hxx
test/: CMakeLists.txt  assignment_problem.cpp  dynamic_problem.cpp  evaluate_gte_instances.cpp  evaluate_netgen_instances.cpp  test_main.cpp  test_problem.cpp
